# triton-plugins

./: CMakeLists.txt  build_script.sh
include/triton/Dialect/TritonInstrument/Transforms/: Passes.h  Passes.td
lib/: CMakeLists.txt  ExtensionHello.cpp  Passes.h  Passes.td
lib/Dialect/: CMakeLists.txt
lib/Dialect/TritonInstrument/IR/: CMakeLists.txt
lib/Dialect/TritonInstrument/Transforms/: CMakeLists.txt  ConcurrencySanitizer.cpp
